--- a/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
+++ b/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GithubIssues.cs" />
     <Compile Include="PageParserTests.cs" />
     <Compile Include="PageSourceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
