--- a/examples/mvc5/AspNetExample/packages.config
+++ b/examples/mvc5/AspNetExample/packages.config
@@ -4,9 +4,10 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="2.2.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="MarkdownDeep.NET" version="1.5" targetFramework="net45" />
-  <package id="MarkdownWeb" version="1.0.1" targetFramework="net45" />
+  <package id="MarkdownWeb" version="1.0.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net45" />
