Being able to use a third party repository was requested. It's now possible.
Some breaking changes (PageParser => PageService), an upgrade instruction comes tomorrow when new nuget package is publishing along with a blog post.

--- a/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
+++ b/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
@@ -53,9 +53,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeConverter.cs" />
     <Compile Include="GithubIssues.cs" />
     <Compile Include="PageParserTests.cs" />
-    <Compile Include="PageSourceTests.cs" />
+    <Compile Include="PostFilters\TocGeneratorTests.cs" />
+    <Compile Include="UrlConverterTests.cs" />
+    <Compile Include="PostFilters\ConvertUrlsToLinksTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
