--- a/examples/mvc5/AspNetExample/packages.config
+++ b/examples/mvc5/AspNetExample/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="2.2.4" targetFramework="net45" />
