* Updated nuget packages
* Switched to highlightjs
* Added support for sequence diagrams
* Adjusted UI in the example project

--- a/src/MarkdownWeb/MarkdownWeb.csproj
+++ b/src/MarkdownWeb/MarkdownWeb.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DependentFilter.cs" />
     <Compile Include="HtmlPart.cs" />
     <Compile Include="PostFilters\TableOfContents.cs" />
+    <Compile Include="PreFilters\SequenceDiagramsFilter.cs" />
     <Compile Include="Storage\EditedPage.cs" />
     <Compile Include="Storage\Files\FileBasedRepository.cs" />
     <Compile Include="Storage\IPageRepository.cs" />
