--- a/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
+++ b/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
@@ -72,7 +72,7 @@
     <Compile Include="FakeConverter.cs" />
     <Compile Include="FakeService.cs" />
     <Compile Include="GithubIssues.cs" />
-    <Compile Include="PageParserTests.cs" />
+    <Compile Include="PageServiceTests.cs" />
     <Compile Include="PostFilters\TocGeneratorTests.cs" />
     <Compile Include="PreFilters\SequenceDiagramsFilterTests.cs" />
     <Compile Include="UrlConverterTests.cs" />
@@ -106,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="TestDocs\FolderTest\other.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
