--- a/examples/mvc5/AspNetExample/packages.config
+++ b/examples/mvc5/AspNetExample/packages.config
@@ -3,13 +3,12 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="3.1.1" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net45" />
+  <package id="Markdig" version="0.13.0" targetFramework="net45" />
   <package id="MarkdownDeep.NET" version="1.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
