--- a/examples/mvc5/GitAspNetMvc/packages.config
+++ b/examples/mvc5/GitAspNetMvc/packages.config
@@ -2,19 +2,15 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
+  <package id="LibGit2Sharp" version="0.24.0" targetFramework="net452" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.185" targetFramework="net452" />
+  <package id="Markdig" version="0.13.0" targetFramework="net452" />
   <package id="MarkdownDeep.NET" version="1.5" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.4.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net452" />
@@ -24,6 +20,5 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
