--- a/src/MarkdownWeb/MarkdownWeb.csproj
+++ b/src/MarkdownWeb/MarkdownWeb.csproj
@@ -21,6 +21,10 @@
   <ItemGroup>
     <PackageReference Include="Markdig" version="0.13.0" />
   </ItemGroup>
+  
+  <Target Name="PostBuild" BeforeTargets="PostBuildEvent" Condition="'$(TargetFramework)' == 'net451'">
+    <Exec Command="copy /y $(TargetPath) $(SolutionDir)..\examples\mvc5\lib" />
+  </Target>
   <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
     <PackageReference Include="CsQuery">
       <Version>1.3.4</Version>
