added support for .NET Standard 2.0

--- a/src/MarkdownWeb.Git.Tests/MarkdownWeb.Git.Tests.csproj
+++ b/src/MarkdownWeb.Git.Tests/MarkdownWeb.Git.Tests.csproj
@@ -4,8 +4,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NSubstitute" version="2.0.3" />
-    <PackageReference Include="FluentAssertions" version="4.19.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="FluentAssertions" version="4.19.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="xunit" version="2.2.0" />
     <PackageReference Include="xunit.abstractions" version="2.0.1" />
     <PackageReference Include="xunit.assert" version="2.2.0" />
@@ -13,8 +13,8 @@
     <PackageReference Include="xunit.extensibility.core" version="2.2.0" />
     <PackageReference Include="xunit.extensibility.execution" version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <PackageReference Include="LibGit2Sharp" Version="0.23.1" />
-    <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="1.0.164" />
+    <PackageReference Include="LibGit2Sharp" Version="0.25.0-preview-0033" />
+    <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="1.0.185" />
 
   </ItemGroup>
   <ItemGroup>
