--- a/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
+++ b/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
@@ -4,11 +4,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NSubstitute" version="2.0.3" />
-    <PackageReference Include="FluentAssertions" version="4.19.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="Microsoft.NETCore.Platforms" version="1.1.0" />
+    <PackageReference Include="FluentAssertions" version="4.19.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="Microsoft.NETCore.Platforms" version="2.0.0" />
     <PackageReference Include="Microsoft.CodeCoverage" Version="1.0.3" />
-    <PackageReference Include="NETStandard.Library" version="1.6.1" />
+    <PackageReference Include="NETStandard.Library" version="2.0.0" />
     <PackageReference Include="xunit" version="2.2.0" />
     <PackageReference Include="xunit.abstractions" version="2.0.1" />
     <PackageReference Include="xunit.assert" version="2.2.0" />
@@ -16,8 +16,8 @@
     <PackageReference Include="xunit.extensibility.core" version="2.2.0" />
     <PackageReference Include="xunit.extensibility.execution" version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <PackageReference Include="LibGit2Sharp" Version="0.23.1" />
-    <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="1.0.164" />
+    <PackageReference Include="LibGit2Sharp" Version="0.25.0-preview-0033" />
+    <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="1.0.185" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarkdownWeb\MarkdownWeb.csproj" />
