--- a/src/MarkdownWeb/MarkdownWeb.csproj
+++ b/src/MarkdownWeb/MarkdownWeb.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.5;net451</TargetFrameworks>
+    <TargetFrameworks>netstandard1.5;net451;netstandard2.0</TargetFrameworks>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
     <Authors>Jonas Gauffin</Authors>
     <PackageLicenseUrl>https://opensource.org/licenses/apache-2.0</PackageLicenseUrl>
@@ -16,10 +16,11 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/jgauffin/markdownweb</RepositoryUrl>
-    <version>1.3.3.0</version>
+    <PackageReleaseNotes>Packages and added netstandard 2.0 as specific target</PackageReleaseNotes>
+    <version>1.3.4</version>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Markdig" version="0.13.0" />
+    <PackageReference Include="Markdig" version="0.13.1" />
   </ItemGroup>
   
   <Target Name="PostBuild" BeforeTargets="PostBuildEvent" Condition="'$(TargetFramework)' == 'net451'">
@@ -34,6 +35,14 @@
     <PackageReference Include="CsQuery.NetStandard">
       <Version>1.3.6.1</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="CsQuery.NetStandard">
+      <Version>1.3.6.1</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
