--- a/examples/mvc5/AspNetExample/Web.config
+++ b/examples/mvc5/AspNetExample/Web.config
@@ -16,7 +16,7 @@
   -->
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
@@ -69,6 +69,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Text.Encoding.CodePages" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
