--- a/examples/mvc5/AspNetExample/packages.config
+++ b/examples/mvc5/AspNetExample/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.12.1" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="4.1.1" targetFramework="net45" />
-  <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
@@ -30,5 +30,7 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="popper.js" version="1.14.3" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
