--- a/examples/mvc5/GitAspNetMvc/packages.config
+++ b/examples/mvc5/GitAspNetMvc/packages.config
@@ -1,25 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.12.1" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="4.1.1" targetFramework="net452" />
-  <package id="CsQuery" version="1.3.4" targetFramework="net452" />
   <package id="jQuery" version="3.3.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net452" />
-  <package id="LibGit2Sharp" version="0.24.0" targetFramework="net452" />
-  <package id="LibGit2Sharp.NativeBinaries" version="1.0.185" targetFramework="net452" />
-  <package id="Markdig" version="0.15.0" targetFramework="net452" />
+  <package id="LibGit2Sharp" version="0.26.0" targetFramework="net46" />
+  <package id="LibGit2Sharp.NativeBinaries" version="2.0.267" targetFramework="net46" />
+  <package id="Markdig" version="0.17.0" targetFramework="net46" />
   <package id="MarkdownDeep.NET" version="1.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.10" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="2.8.2" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="3.1.1" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="popper.js" version="1.14.3" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
