--- a/src/MarkdownWeb.Git.Tests/MarkdownWeb.Git.Tests.csproj
+++ b/src/MarkdownWeb.Git.Tests/MarkdownWeb.Git.Tests.csproj
@@ -3,18 +3,21 @@
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NSubstitute" version="3.1.0" />
-    <PackageReference Include="FluentAssertions" version="5.3.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
-    <PackageReference Include="xunit" version="2.3.1" />
-    <PackageReference Include="xunit.abstractions" version="2.0.1" />
-    <PackageReference Include="xunit.assert" version="2.3.1" />
-    <PackageReference Include="xunit.core" version="2.3.1" />
-    <PackageReference Include="xunit.extensibility.core" version="2.3.1" />
-    <PackageReference Include="xunit.extensibility.execution" version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
-    <PackageReference Include="LibGit2Sharp" Version="0.25.0" />
-    <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="1.0.210" />
+    <PackageReference Include="NSubstitute" version="4.2.0" />
+    <PackageReference Include="FluentAssertions" version="5.7.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
+    <PackageReference Include="xunit" version="2.4.1" />
+    <PackageReference Include="xunit.abstractions" version="2.0.3" />
+    <PackageReference Include="xunit.assert" version="2.4.1" />
+    <PackageReference Include="xunit.core" version="2.4.1" />
+    <PackageReference Include="xunit.extensibility.core" version="2.4.1" />
+    <PackageReference Include="xunit.extensibility.execution" version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="LibGit2Sharp" Version="0.26.0" />
+    <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="2.0.267" />
 
   </ItemGroup>
   <ItemGroup>
