--- a/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
+++ b/src/MarkdownWeb.Tests/MarkdownWeb.Tests.csproj
@@ -3,19 +3,21 @@
     <TargetFramework>net46</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NSubstitute" version="3.1.0" />
-    <PackageReference Include="FluentAssertions" version="5.3.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
-    <PackageReference Include="Microsoft.NETCore.Platforms" version="2.0.1" />
-    <PackageReference Include="Microsoft.CodeCoverage" Version="1.0.3" />
-    <PackageReference Include="NETStandard.Library" version="2.0.0" />
-    <PackageReference Include="xunit" version="2.3.1" />
-    <PackageReference Include="xunit.abstractions" version="2.0.1" />
-    <PackageReference Include="xunit.assert" version="2.3.1" />
-    <PackageReference Include="xunit.core" version="2.3.1" />
-    <PackageReference Include="xunit.extensibility.core" version="2.3.1" />
-    <PackageReference Include="xunit.extensibility.execution" version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="NSubstitute" version="4.2.0" />
+    <PackageReference Include="FluentAssertions" version="5.7.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
+    <PackageReference Include="Microsoft.NETCore.Platforms" version="2.2.1" />
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.1.1" />
+    <PackageReference Include="xunit" version="2.4.1" />
+    <PackageReference Include="xunit.abstractions" version="2.0.3" />
+    <PackageReference Include="xunit.assert" version="2.4.1" />
+    <PackageReference Include="xunit.core" version="2.4.1" />
+    <PackageReference Include="xunit.extensibility.core" version="2.4.1" />
+    <PackageReference Include="xunit.extensibility.execution" version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarkdownWeb\MarkdownWeb.csproj" />
