--- a/src/MarkdownWeb/MarkdownWeb.csproj
+++ b/src/MarkdownWeb/MarkdownWeb.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.5;net451;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
     <Authors>Jonas Gauffin</Authors>
     <PackageLicenseUrl>https://opensource.org/licenses/apache-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/jgauffin/markdownweb</PackageProjectUrl>
-    <Description>Wiki generator with markdown and git support (NetStandard 1.5+ and .NET 4.5.1)</Description>
-    <Copyright>© jgauffin 2017</Copyright>
+    <Description>Wiki generator with markdown and git support (NetStandard 1.5+ and .NET 451+)</Description>
+    <Copyright>© jgauffin 2019</Copyright>
     <PackageTags>sequence-diagrams markdown html wiki</PackageTags>
     <Product>MarkdownWeb ($(TargetFramework))</Product>
     <IncludeSymbols>true</IncludeSymbols>
@@ -15,33 +15,20 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/jgauffin/markdownweb</RepositoryUrl>
-    <PackageReleaseNotes>Bug fixes in path handling</PackageReleaseNotes>
-    <version>1.3.7</version>
+    <PackageReleaseNotes>Replaced CsQuery with AngleSharp</PackageReleaseNotes>
+    <version>1.3.8</version>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Markdig" version="0.15.0" />
-  </ItemGroup>
-  
-  <Target Name="PostBuild" BeforeTargets="PostBuildEvent" Condition="'$(TargetFramework)' == 'net451'">
-    <Exec Command="copy /y $(TargetPath) $(SolutionDir)..\examples\mvc5\lib" />
-  </Target>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
-    <PackageReference Include="CsQuery">
-      <Version>1.3.4</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.5'">
-    <PackageReference Include="CsQuery.NetStandard">
-      <Version>1.3.6.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="CsQuery.NetStandard">
-      <Version>1.3.6.1</Version>
-    </PackageReference>
+    <PackageReference Include="Markdig" version="0.17.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="NETStandard.Library" Version="2.0.0" />
+    <PackageReference Include="anglesharp">
+      <Version>0.12.1</Version>
+    </PackageReference>
   </ItemGroup>
+  
+  <Target Name="PostBuild" BeforeTargets="PostBuildEvent" Condition="'$(TargetFramework)' == 'net46'">
+    <Exec Command="copy /y $(TargetPath) $(SolutionDir)..\examples\mvc5\lib" />
+  </Target>
 
 </Project>
